After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 731898 - omxvideodec: fix a query leak
omxvideodec: fix a query leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-omx
1.3.2
Other Linux
: Normal minor
: 1.2.0
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-06-19 07:49 UTC by Aurélien Zanelli
Modified: 2014-07-23 08:09 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
omxvideodec: fix a query leak (1.09 KB, patch)
2014-06-19 07:49 UTC, Aurélien Zanelli
committed Details | Review

Description Aurélien Zanelli 2014-06-19 07:49:59 UTC
Created attachment 278736 [details] [review]
omxvideodec: fix a query leak

A drain query is leak when draining the pipeline on EOS.

The fix also add a debug message to indicate query failure.
Comment 1 Sebastian Dröge (slomo) 2014-06-20 09:54:51 UTC
commit 58aa603b36eb74cf54d492381c6a9f98cd9c3678
Author: Aurélien Zanelli <aurelien.zanelli@darkosphere.fr>
Date:   Wed Jun 18 23:04:33 2014 +0200

    omxvideodec: fix a query leak
    
    Also add a debug message if query fails.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=731898