omxvideodec: fix a query leak

Also add a debug message if query fails.

https://bugzilla.gnome.org/show_bug.cgi?id=731898